filenames = {
  default_app_ts_sources = [
    "default_app/default_app.ts",
    "default_app/index.ts",
    "default_app/main.ts",
    "default_app/preload.ts",
  ]

  default_app_static_sources = [
    "default_app/icon.png",
    "default_app/index.html",
    "default_app/package.json",
    "default_app/styles.css",
  ]

  default_app_octicon_sources = [
    "node_modules/@primer/octicons/build/build.css",
    "node_modules/@primer/octicons/build/svg/gist.svg",
    "node_modules/@primer/octicons/build/svg/mark-github.svg",
    "node_modules/@primer/octicons/build/svg/gear.svg",
    "node_modules/@primer/octicons/build/svg/star.svg",
    "node_modules/@primer/octicons/build/svg/gift.svg",
  ]

  lib_sources = [
    "shell/app/atom_content_client.cc",
    "shell/app/atom_content_client.h",
    "shell/app/atom_main_delegate.cc",
    "shell/app/atom_main_delegate.h",
    "shell/app/atom_main_delegate_mac.h",
    "shell/app/atom_main_delegate_mac.mm",
    "shell/app/command_line_args.cc",
    "shell/app/command_line_args.h",
    "shell/app/uv_task_runner.cc",
    "shell/app/uv_task_runner.h",
    "shell/browser/api/atom_api_app_mac.mm",
    "shell/browser/api/atom_api_app.cc",
    "shell/browser/font_defaults.cc",
    "shell/browser/font_defaults.h",
    "shell/browser/feature_list.cc",
    "shell/browser/feature_list.h",
    "shell/browser/api/atom_api_app.h",
    "shell/browser/api/atom_api_auto_updater.cc",
    "shell/browser/api/atom_api_auto_updater.h",
    "shell/browser/api/atom_api_browser_view.cc",
    "shell/browser/api/atom_api_browser_view.h",
    "shell/browser/api/atom_api_content_tracing.cc",
    "shell/browser/api/atom_api_cookies.cc",
    "shell/browser/api/atom_api_cookies.h",
    "shell/browser/api/atom_api_debugger.cc",
    "shell/browser/api/atom_api_debugger.h",
    "shell/browser/api/atom_api_dialog.cc",
    "shell/browser/api/atom_api_download_item.cc",
    "shell/browser/api/atom_api_download_item.h",
    "shell/browser/api/atom_api_event.cc",
    "shell/browser/api/atom_api_global_shortcut.cc",
    "shell/browser/api/atom_api_global_shortcut.h",
    "shell/browser/api/atom_api_in_app_purchase.cc",
    "shell/browser/api/atom_api_in_app_purchase.h",
    "shell/browser/api/atom_api_menu.cc",
    "shell/browser/api/atom_api_menu.h",
    "shell/browser/api/atom_api_menu_mac.h",
    "shell/browser/api/atom_api_menu_mac.mm",
    "shell/browser/api/atom_api_menu_views.cc",
    "shell/browser/api/atom_api_menu_views.h",
    "shell/browser/api/atom_api_net.cc",
    "shell/browser/api/atom_api_net.h",
    "shell/browser/api/atom_api_net_log.cc",
    "shell/browser/api/atom_api_net_log.h",
    "shell/browser/api/atom_api_notification.cc",
    "shell/browser/api/atom_api_notification.h",
    "shell/browser/api/atom_api_power_monitor_mac.mm",
    "shell/browser/api/atom_api_power_monitor_win.cc",
    "shell/browser/api/atom_api_power_monitor.cc",
    "shell/browser/api/atom_api_power_monitor.h",
    "shell/browser/api/atom_api_power_save_blocker.cc",
    "shell/browser/api/atom_api_power_save_blocker.h",
    "shell/browser/api/atom_api_protocol_ns.cc",
    "shell/browser/api/atom_api_protocol_ns.h",
    "shell/browser/api/atom_api_screen.cc",
    "shell/browser/api/atom_api_screen.h",
    "shell/browser/api/atom_api_session.cc",
    "shell/browser/api/atom_api_session.h",
    "shell/browser/api/atom_api_system_preferences.cc",
    "shell/browser/api/atom_api_system_preferences.h",
    "shell/browser/api/atom_api_system_preferences_mac.mm",
    "shell/browser/api/atom_api_system_preferences_win.cc",
    "shell/browser/api/atom_api_top_level_window.cc",
    "shell/browser/api/atom_api_top_level_window.h",
    "shell/browser/api/atom_api_tray.cc",
    "shell/browser/api/atom_api_tray.h",
    "shell/browser/api/atom_api_url_request_ns.cc",
    "shell/browser/api/atom_api_url_request_ns.h",
    "shell/browser/api/atom_api_view.cc",
    "shell/browser/api/atom_api_view.h",
    "shell/browser/api/atom_api_web_contents.cc",
    "shell/browser/api/atom_api_web_contents.h",
    "shell/browser/api/atom_api_web_contents_impl.cc",
    "shell/browser/api/atom_api_web_contents_mac.mm",
    "shell/browser/api/atom_api_web_contents_view.cc",
    "shell/browser/api/atom_api_web_contents_view.h",
    "shell/browser/api/atom_api_web_request_ns.cc",
    "shell/browser/api/atom_api_web_request_ns.h",
    "shell/browser/api/atom_api_web_view_manager.cc",
    "shell/browser/api/atom_api_browser_window.cc",
    "shell/browser/api/atom_api_browser_window.h",
    "shell/browser/api/atom_api_browser_window_mac.mm",
    "shell/browser/api/atom_api_browser_window_views.cc",
    "shell/browser/api/event.cc",
    "shell/browser/api/event.h",
    "shell/browser/api/event_emitter.cc",
    "shell/browser/api/event_emitter.h",
    "shell/browser/api/trackable_object.cc",
    "shell/browser/api/trackable_object.h",
    "shell/browser/api/frame_subscriber.cc",
    "shell/browser/api/frame_subscriber.h",
    "shell/browser/api/gpu_info_enumerator.cc",
    "shell/browser/api/gpu_info_enumerator.h",
    "shell/browser/api/gpuinfo_manager.cc",
    "shell/browser/api/gpuinfo_manager.h",
    "shell/browser/api/process_metric.cc",
    "shell/browser/api/process_metric.h",
    "shell/browser/api/save_page_handler.cc",
    "shell/browser/api/save_page_handler.h",
    "shell/browser/auto_updater.cc",
    "shell/browser/auto_updater.h",
    "shell/browser/auto_updater_mac.mm",
    "shell/browser/atom_autofill_driver_factory.cc",
    "shell/browser/atom_autofill_driver_factory.h",
    "shell/browser/atom_autofill_driver.cc",
    "shell/browser/atom_autofill_driver.h",
    "shell/browser/atom_blob_reader.cc",
    "shell/browser/atom_blob_reader.h",
    "shell/browser/atom_browser_client.cc",
    "shell/browser/atom_browser_client.h",
    "shell/browser/atom_browser_context.cc",
    "shell/browser/atom_browser_context.h",
    "shell/browser/atom_download_manager_delegate.cc",
    "shell/browser/atom_download_manager_delegate.h",
    "shell/browser/atom_gpu_client.cc",
    "shell/browser/atom_gpu_client.h",
    "shell/browser/atom_browser_main_parts.cc",
    "shell/browser/atom_browser_main_parts.h",
    "shell/browser/atom_browser_main_parts_mac.mm",
    "shell/browser/atom_browser_main_parts_posix.cc",
    "shell/browser/atom_javascript_dialog_manager.cc",
    "shell/browser/atom_javascript_dialog_manager.h",
    "shell/browser/atom_navigation_throttle.h",
    "shell/browser/atom_navigation_throttle.cc",
    "shell/browser/atom_paths.h",
    "shell/browser/atom_permission_manager.cc",
    "shell/browser/atom_permission_manager.h",
    "shell/browser/atom_quota_permission_context.cc",
    "shell/browser/atom_quota_permission_context.h",
    "shell/browser/atom_speech_recognition_manager_delegate.cc",
    "shell/browser/atom_speech_recognition_manager_delegate.h",
    "shell/browser/atom_web_ui_controller_factory.cc",
    "shell/browser/atom_web_ui_controller_factory.h",
    "shell/browser/browser.cc",
    "shell/browser/browser.h",
    "shell/browser/browser_linux.cc",
    "shell/browser/browser_mac.mm",
    "shell/browser/browser_win.cc",
    "shell/browser/browser_observer.h",
    "shell/browser/browser_process_impl.cc",
    "shell/browser/browser_process_impl.h",
    "shell/browser/child_web_contents_tracker.cc",
    "shell/browser/child_web_contents_tracker.h",
    "shell/browser/common_web_contents_delegate_mac.mm",
    "shell/browser/common_web_contents_delegate_views.cc",
    "shell/browser/common_web_contents_delegate.cc",
    "shell/browser/common_web_contents_delegate.h",
    "shell/browser/cookie_change_notifier.cc",
    "shell/browser/cookie_change_notifier.h",
    "shell/browser/javascript_environment.cc",
    "shell/browser/javascript_environment.h",
    "shell/browser/lib/bluetooth_chooser.cc",
    "shell/browser/lib/bluetooth_chooser.h",
    "shell/browser/lib/power_observer.h",
    "shell/browser/lib/power_observer_linux.h",
    "shell/browser/lib/power_observer_linux.cc",
    "shell/browser/login_handler.cc",
    "shell/browser/login_handler.h",
    "shell/browser/mac/atom_application.h",
    "shell/browser/mac/atom_application.mm",
    "shell/browser/mac/atom_application_delegate.h",
    "shell/browser/mac/atom_application_delegate.mm",
    "shell/browser/mac/dict_util.h",
    "shell/browser/mac/dict_util.mm",
    "shell/browser/mac/in_app_purchase.h",
    "shell/browser/mac/in_app_purchase.mm",
    "shell/browser/mac/in_app_purchase_observer.h",
    "shell/browser/mac/in_app_purchase_observer.mm",
    "shell/browser/mac/in_app_purchase_product.h",
    "shell/browser/mac/in_app_purchase_product.mm",
    "shell/browser/microtasks_runner.cc",
    "shell/browser/microtasks_runner.h",
    "shell/browser/native_browser_view.cc",
    "shell/browser/native_browser_view.h",
    "shell/browser/native_browser_view_mac.h",
    "shell/browser/native_browser_view_mac.mm",
    "shell/browser/native_browser_view_views.h",
    "shell/browser/native_browser_view_views.cc",
    "shell/browser/native_window.cc",
    "shell/browser/native_window.h",
    "shell/browser/native_window_views_win.cc",
    "shell/browser/native_window_views.cc",
    "shell/browser/native_window_views.h",
    "shell/browser/native_window_mac.h",
    "shell/browser/native_window_mac.mm",
    "shell/browser/native_window_observer.h",
    "shell/browser/media/media_capture_devices_dispatcher.cc",
    "shell/browser/media/media_capture_devices_dispatcher.h",
    "shell/browser/media/media_device_id_salt.cc",
    "shell/browser/media/media_device_id_salt.h",
    "shell/browser/media/media_stream_devices_controller.cc",
    "shell/browser/media/media_stream_devices_controller.h",
    "shell/browser/net/asar/asar_url_loader.cc",
    "shell/browser/net/asar/asar_url_loader.h",
    "shell/browser/net/atom_url_loader_factory.cc",
    "shell/browser/net/atom_url_loader_factory.h",
    "shell/browser/net/cert_verifier_client.cc",
    "shell/browser/net/cert_verifier_client.h",
    "shell/browser/net/proxying_url_loader_factory.cc",
    "shell/browser/net/proxying_url_loader_factory.h",
    "shell/browser/net/network_context_service_factory.cc",
    "shell/browser/net/network_context_service_factory.h",
    "shell/browser/net/network_context_service.cc",
    "shell/browser/net/network_context_service.h",
    "shell/browser/net/node_stream_loader.cc",
    "shell/browser/net/node_stream_loader.h",
    "shell/browser/net/resolve_proxy_helper.cc",
    "shell/browser/net/resolve_proxy_helper.h",
    "shell/browser/net/system_network_context_manager.cc",
    "shell/browser/net/system_network_context_manager.h",
    "shell/browser/net/url_pipe_loader.cc",
    "shell/browser/net/url_pipe_loader.h",
    "shell/browser/notifications/linux/libnotify_notification.cc",
    "shell/browser/notifications/linux/libnotify_notification.h",
    "shell/browser/notifications/linux/notification_presenter_linux.cc",
    "shell/browser/notifications/linux/notification_presenter_linux.h",
    "shell/browser/notifications/mac/cocoa_notification.h",
    "shell/browser/notifications/mac/cocoa_notification.mm",
    "shell/browser/notifications/mac/notification_center_delegate.h",
    "shell/browser/notifications/mac/notification_center_delegate.mm",
    "shell/browser/notifications/mac/notification_presenter_mac.h",
    "shell/browser/notifications/mac/notification_presenter_mac.mm",
    "shell/browser/notifications/notification.cc",
    "shell/browser/notifications/notification.h",
    "shell/browser/notifications/notification_delegate.h",
    "shell/browser/notifications/notification_presenter.cc",
    "shell/browser/notifications/notification_presenter.h",
    "shell/browser/notifications/platform_notification_service.cc",
    "shell/browser/notifications/platform_notification_service.h",
    "shell/browser/notifications/win/notification_presenter_win.cc",
    "shell/browser/notifications/win/notification_presenter_win.h",
    "shell/browser/notifications/win/notification_presenter_win7.cc",
    "shell/browser/notifications/win/notification_presenter_win7.h",
    "shell/browser/notifications/win/win32_desktop_notifications/common.h",
    "shell/browser/notifications/win/win32_desktop_notifications/desktop_notification_controller.cc",
    "shell/browser/notifications/win/win32_desktop_notifications/desktop_notification_controller.h",
    "shell/browser/notifications/win/win32_desktop_notifications/toast.cc",
    "shell/browser/notifications/win/win32_desktop_notifications/toast.h",
    "shell/browser/notifications/win/win32_desktop_notifications/toast_uia.cc",
    "shell/browser/notifications/win/win32_desktop_notifications/toast_uia.h",
    "shell/browser/notifications/win/win32_notification.cc",
    "shell/browser/notifications/win/win32_notification.h",
    "shell/browser/notifications/win/windows_toast_notification.cc",
    "shell/browser/notifications/win/windows_toast_notification.h",
    "shell/browser/node_debugger.cc",
    "shell/browser/node_debugger.h",
    "shell/browser/pref_store_delegate.cc",
    "shell/browser/pref_store_delegate.h",
    "shell/browser/relauncher_linux.cc",
    "shell/browser/relauncher_mac.cc",
    "shell/browser/relauncher_win.cc",
    "shell/browser/relauncher.cc",
    "shell/browser/relauncher.h",
    "shell/browser/session_preferences.cc",
    "shell/browser/session_preferences.h",
    "shell/browser/special_storage_policy.cc",
    "shell/browser/special_storage_policy.h",
    "shell/browser/ui/accelerator_util.cc",
    "shell/browser/ui/accelerator_util.h",
    "shell/browser/ui/atom_menu_model.cc",
    "shell/browser/ui/atom_menu_model.h",
    "shell/browser/ui/autofill_popup.cc",
    "shell/browser/ui/autofill_popup.h",
    "shell/browser/ui/certificate_trust.h",
    "shell/browser/ui/certificate_trust_mac.mm",
    "shell/browser/ui/certificate_trust_win.cc",
    "shell/browser/ui/cocoa/atom_bundle_mover.h",
    "shell/browser/ui/cocoa/atom_bundle_mover.mm",
    "shell/browser/ui/cocoa/atom_menu_controller.h",
    "shell/browser/ui/cocoa/atom_menu_controller.mm",
    "shell/browser/ui/cocoa/atom_native_widget_mac.h",
    "shell/browser/ui/cocoa/atom_native_widget_mac.mm",
    "shell/browser/ui/cocoa/atom_ns_window.h",
    "shell/browser/ui/cocoa/atom_ns_window.mm",
    "shell/browser/ui/cocoa/atom_ns_window_delegate.h",
    "shell/browser/ui/cocoa/atom_ns_window_delegate.mm",
    "shell/browser/ui/cocoa/atom_preview_item.h",
    "shell/browser/ui/cocoa/atom_preview_item.mm",
    "shell/browser/ui/cocoa/atom_touch_bar.h",
    "shell/browser/ui/cocoa/atom_touch_bar.mm",
    "shell/browser/ui/cocoa/delayed_native_view_host.cc",
    "shell/browser/ui/cocoa/delayed_native_view_host.h",
    "shell/browser/ui/cocoa/views_delegate_mac.h",
    "shell/browser/ui/cocoa/views_delegate_mac.mm",
    "shell/browser/ui/cocoa/root_view_mac.mm",
    "shell/browser/ui/cocoa/root_view_mac.h",
    "shell/browser/ui/cocoa/atom_inspectable_web_contents_view.h",
    "shell/browser/ui/cocoa/atom_inspectable_web_contents_view.mm",
    "shell/browser/ui/cocoa/event_dispatching_window.h",
    "shell/browser/ui/cocoa/event_dispatching_window.mm",
    "shell/browser/ui/devtools_manager_delegate.cc",
    "shell/browser/ui/devtools_manager_delegate.h",
    "shell/browser/ui/devtools_ui.cc",
    "shell/browser/ui/devtools_ui.h",
    "shell/browser/ui/drag_util_mac.mm",
    "shell/browser/ui/drag_util_views.cc",
    "shell/browser/ui/drag_util.h",
    "shell/browser/ui/file_dialog.h",
    "shell/browser/ui/file_dialog_gtk.cc",
    "shell/browser/ui/file_dialog_mac.mm",
    "shell/browser/ui/file_dialog_win.cc",
    "shell/browser/ui/inspectable_web_contents.cc",
    "shell/browser/ui/inspectable_web_contents.h",
    "shell/browser/ui/inspectable_web_contents_delegate.h",
    "shell/browser/ui/inspectable_web_contents_impl.cc",
    "shell/browser/ui/inspectable_web_contents_impl.h",
    "shell/browser/ui/inspectable_web_contents_view.h",
    "shell/browser/ui/inspectable_web_contents_view_delegate.cc",
    "shell/browser/ui/inspectable_web_contents_view_delegate.h",
    "shell/browser/ui/inspectable_web_contents_view_mac.h",
    "shell/browser/ui/inspectable_web_contents_view_mac.mm",
    "shell/browser/ui/message_box.h",
    "shell/browser/ui/message_box_gtk.cc",
    "shell/browser/ui/message_box_mac.mm",
    "shell/browser/ui/message_box_win.cc",
    "shell/browser/ui/cocoa/NSColor+Hex.mm",
    "shell/browser/ui/cocoa/NSColor+Hex.h",
    "shell/browser/ui/cocoa/NSString+ANSI.mm",
    "shell/browser/ui/cocoa/NSString+ANSI.h",
    "shell/browser/ui/tray_icon.cc",
    "shell/browser/ui/tray_icon.h",
    "shell/browser/ui/tray_icon_gtk.cc",
    "shell/browser/ui/tray_icon_gtk.h",
    "shell/browser/ui/tray_icon_cocoa.h",
    "shell/browser/ui/tray_icon_cocoa.mm",
    "shell/browser/ui/tray_icon_observer.h",
    "shell/browser/ui/tray_icon_win.cc",
    "shell/browser/ui/views/atom_views_delegate.cc",
    "shell/browser/ui/views/atom_views_delegate.h",
    "shell/browser/ui/views/autofill_popup_view.cc",
    "shell/browser/ui/views/autofill_popup_view.h",
    "shell/browser/ui/views/frameless_view.cc",
    "shell/browser/ui/views/frameless_view.h",
    "shell/browser/ui/views/global_menu_bar_x11.cc",
    "shell/browser/ui/views/global_menu_bar_x11.h",
    "shell/browser/ui/views/inspectable_web_contents_view_views.cc",
    "shell/browser/ui/views/inspectable_web_contents_view_views.h",
    "shell/browser/ui/views/menu_bar.cc",
    "shell/browser/ui/views/menu_bar.h",
    "shell/browser/ui/views/menu_delegate.cc",
    "shell/browser/ui/views/menu_delegate.h",
    "shell/browser/ui/views/menu_model_adapter.cc",
    "shell/browser/ui/views/menu_model_adapter.h",
    "shell/browser/ui/views/native_frame_view.cc",
    "shell/browser/ui/views/native_frame_view.h",
    "shell/browser/ui/views/root_view.cc",
    "shell/browser/ui/views/root_view.h",
    "shell/browser/ui/views/submenu_button.cc",
    "shell/browser/ui/views/submenu_button.h",
    "shell/browser/ui/views/win_frame_view.cc",
    "shell/browser/ui/views/win_frame_view.h",
    "shell/browser/ui/win/atom_desktop_native_widget_aura.cc",
    "shell/browser/ui/win/atom_desktop_native_widget_aura.h",
    "shell/browser/ui/win/atom_desktop_window_tree_host_win.cc",
    "shell/browser/ui/win/atom_desktop_window_tree_host_win.h",
    "shell/browser/ui/win/jump_list.cc",
    "shell/browser/ui/win/jump_list.h",
    "shell/browser/ui/win/notify_icon_host.cc",
    "shell/browser/ui/win/notify_icon_host.h",
    "shell/browser/ui/win/notify_icon.cc",
    "shell/browser/ui/win/notify_icon.h",
    "shell/browser/ui/win/taskbar_host.cc",
    "shell/browser/ui/win/taskbar_host.h",
    "shell/browser/ui/x/event_disabler.cc",
    "shell/browser/ui/x/event_disabler.h",
    "shell/browser/ui/x/window_state_watcher.cc",
    "shell/browser/ui/x/window_state_watcher.h",
    "shell/browser/ui/x/x_window_utils.cc",
    "shell/browser/ui/x/x_window_utils.h",
    "shell/browser/unresponsive_suppressor.cc",
    "shell/browser/unresponsive_suppressor.h",
    "shell/browser/win/scoped_hstring.cc",
    "shell/browser/win/scoped_hstring.h",
    "shell/browser/web_contents_permission_helper.cc",
    "shell/browser/web_contents_permission_helper.h",
    "shell/browser/web_contents_preferences.cc",
    "shell/browser/web_contents_preferences.h",
    "shell/browser/web_contents_zoom_controller.cc",
    "shell/browser/web_contents_zoom_controller.h",
    "shell/browser/web_dialog_helper.cc",
    "shell/browser/web_dialog_helper.h",
    "shell/browser/web_view_guest_delegate.cc",
    "shell/browser/web_view_guest_delegate.h",
    "shell/browser/web_view_manager.cc",
    "shell/browser/web_view_manager.h",
    "shell/browser/window_list.cc",
    "shell/browser/window_list.h",
    "shell/browser/window_list_observer.h",
    "shell/browser/zoom_level_delegate.cc",
    "shell/browser/zoom_level_delegate.h",
    "shell/common/api/atom_api_asar.cc",
    "shell/common/api/atom_api_clipboard.cc",
    "shell/common/api/atom_api_clipboard.h",
    "shell/common/api/atom_api_clipboard_mac.mm",
    "shell/common/api/atom_api_command_line.cc",
    "shell/common/api/atom_api_crash_reporter.cc",
    "shell/common/api/atom_api_key_weak_map.h",
    "shell/common/api/atom_api_native_image.cc",
    "shell/common/api/atom_api_native_image.h",
    "shell/common/api/atom_api_native_image_mac.mm",
    "shell/common/api/atom_api_native_theme.cc",
    "shell/common/api/atom_api_native_theme.h",
    "shell/common/api/atom_api_shell.cc",
    "shell/common/api/atom_api_v8_util.cc",
    "shell/common/api/electron_bindings.cc",
    "shell/common/api/electron_bindings.h",
    "shell/common/api/constructor.h",
    "shell/common/api/event_emitter_caller.cc",
    "shell/common/api/event_emitter_caller.h",
    "shell/common/api/features.cc",
    "shell/common/api/gin_utils.h",
    "shell/common/api/locker.cc",
    "shell/common/api/locker.h",
    "shell/common/api/object_life_monitor.cc",
    "shell/common/api/object_life_monitor.h",
    "shell/common/api/remote_callback_freer.cc",
    "shell/common/api/remote_callback_freer.h",
    "shell/common/api/remote_object_freer.cc",
    "shell/common/api/remote_object_freer.h",
    "shell/common/asar/archive.cc",
    "shell/common/asar/archive.h",
    "shell/common/asar/asar_util.cc",
    "shell/common/asar/asar_util.h",
    "shell/common/asar/scoped_temporary_file.cc",
    "shell/common/asar/scoped_temporary_file.h",
    "shell/common/application_info_linux.cc",
    "shell/common/application_info_mac.mm",
    "shell/common/application_info_win.cc",
    "shell/common/application_info.cc",
    "shell/common/application_info.h",
    "shell/common/atom_command_line.cc",
    "shell/common/atom_command_line.h",
    "shell/common/atom_constants.cc",
    "shell/common/atom_constants.h",
    "shell/common/color_util.cc",
    "shell/common/color_util.h",
    "shell/common/crash_reporter/crash_reporter.cc",
    "shell/common/crash_reporter/crash_reporter.h",
    "shell/common/crash_reporter/crash_reporter_linux.cc",
    "shell/common/crash_reporter/crash_reporter_linux.h",
    "shell/common/crash_reporter/crash_reporter_mac.h",
    "shell/common/crash_reporter/crash_reporter_mac.mm",
    "shell/common/crash_reporter/crash_reporter_win.h",
    "shell/common/crash_reporter/crash_reporter_win.cc",
    "shell/common/crash_reporter/linux/crash_dump_handler.cc",
    "shell/common/crash_reporter/linux/crash_dump_handler.h",
    "shell/common/crash_reporter/win/crash_service_main.cc",
    "shell/common/crash_reporter/win/crash_service_main.h",
    "shell/common/gin_converters/callback_converter_gin_adapter.h",
    "shell/common/gin_converters/file_dialog_converter.cc",
    "shell/common/gin_converters/file_dialog_converter.h",
    "shell/common/gin_converters/file_path_converter.h",
    "shell/common/gin_converters/gurl_converter.h",
    "shell/common/gin_converters/image_converter.cc",
    "shell/common/gin_converters/image_converter.h",
    "shell/common/gin_converters/message_box_converter.cc",
    "shell/common/gin_converters/message_box_converter.h",
    "shell/common/gin_converters/native_window_converter.h",
    "shell/common/gin_converters/net_converter.cc",
    "shell/common/gin_converters/net_converter.h",
    "shell/common/gin_converters/std_converter.h",
    "shell/common/gin_converters/value_converter_gin_adapter.h",
    "shell/common/gin_util.h",
    "shell/common/heap_snapshot.cc",
    "shell/common/heap_snapshot.h",
    "shell/common/key_weak_map.h",
    "shell/common/keyboard_util.cc",
    "shell/common/keyboard_util.h",
    "shell/common/deprecate_util.cc",
    "shell/common/deprecate_util.h",
    "shell/common/error_util.cc",
    "shell/common/error_util.h",
    "shell/common/mouse_util.cc",
    "shell/common/mouse_util.h",
    "shell/common/mac/main_application_bundle.h",
    "shell/common/mac/main_application_bundle.mm",
    "shell/common/native_mate_converters/accelerator_converter.cc",
    "shell/common/native_mate_converters/accelerator_converter.h",
    "shell/common/native_mate_converters/blink_converter.cc",
    "shell/common/native_mate_converters/blink_converter.h",
    "shell/common/native_mate_converters/callback.cc",
    "shell/common/native_mate_converters/callback.h",
    "shell/common/native_mate_converters/content_converter.cc",
    "shell/common/native_mate_converters/content_converter.h",
    "shell/common/native_mate_converters/file_dialog_converter.h",
    "shell/common/native_mate_converters/file_path_converter.h",
    "shell/common/native_mate_converters/gfx_converter.cc",
    "shell/common/native_mate_converters/gfx_converter.h",
    "shell/common/native_mate_converters/gurl_converter.h",
    "shell/common/native_mate_converters/image_converter.h",
    "shell/common/native_mate_converters/map_converter.h",
    "shell/common/native_mate_converters/native_window_converter.h",
    "shell/common/native_mate_converters/net_converter.h",
    "shell/common/native_mate_converters/network_converter.cc",
    "shell/common/native_mate_converters/network_converter.h",
    "shell/common/native_mate_converters/once_callback.h",
    "shell/common/native_mate_converters/string16_converter.h",
    "shell/common/native_mate_converters/ui_base_types_converter.h",
    "shell/common/native_mate_converters/v8_value_converter.cc",
    "shell/common/native_mate_converters/v8_value_converter.h",
    "shell/common/native_mate_converters/value_converter.cc",
    "shell/common/native_mate_converters/value_converter.h",
    "shell/common/node_bindings.cc",
    "shell/common/node_bindings.h",
    "shell/common/node_bindings_linux.cc",
    "shell/common/node_bindings_linux.h",
    "shell/common/node_bindings_mac.cc",
    "shell/common/node_bindings_mac.h",
    "shell/common/node_bindings_win.cc",
    "shell/common/node_bindings_win.h",
    "shell/common/node_includes.h",
    "shell/common/options_switches.cc",
    "shell/common/options_switches.h",
    "shell/common/platform_util.h",
    "shell/common/platform_util_linux.cc",
    "shell/common/platform_util_mac.mm",
    "shell/common/platform_util_win.cc",
    "shell/common/promise_util.h",
    "shell/common/promise_util.cc",
    "shell/common/skia_util.h",
    "shell/common/skia_util.cc",
    "shell/renderer/api/atom_api_renderer_ipc.cc",
    "shell/renderer/api/atom_api_spell_check_client.cc",
    "shell/renderer/api/atom_api_spell_check_client.h",
    "shell/renderer/api/atom_api_web_frame.cc",
    "shell/renderer/atom_autofill_agent.cc",
    "shell/renderer/atom_autofill_agent.h",
    "shell/renderer/atom_render_frame_observer.cc",
    "shell/renderer/atom_render_frame_observer.h",
    "shell/renderer/atom_renderer_client.cc",
    "shell/renderer/atom_renderer_client.h",
    "shell/renderer/content_settings_observer.cc",
    "shell/renderer/content_settings_observer.h",
    "shell/renderer/electron_api_service_impl.cc",
    "shell/renderer/electron_api_service_impl.h",
    "shell/renderer/atom_sandboxed_renderer_client.cc",
    "shell/renderer/atom_sandboxed_renderer_client.h",
    "shell/renderer/guest_view_container.cc",
    "shell/renderer/guest_view_container.h",
    "shell/renderer/renderer_client_base.cc",
    "shell/renderer/renderer_client_base.h",
    "shell/renderer/web_worker_observer.cc",
    "shell/renderer/web_worker_observer.h",
    "shell/utility/atom_content_utility_client.cc",
    "shell/utility/atom_content_utility_client.h",
    "chromium_src/chrome/browser/process_singleton_posix.cc",
    "chromium_src/chrome/browser/process_singleton_win.cc",
    "chromium_src/chrome/browser/process_singleton.h",
    "chromium_src/chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.cc",
    "chromium_src/chrome/browser/ui/views/frame/global_menu_bar_registrar_x11.h",
  ]

  lib_sources_nss = [
    "chromium_src/chrome/browser/certificate_manager_model.cc",
    "chromium_src/chrome/browser/certificate_manager_model.h",
  ]

  lib_sources_extensions = [
    "shell/browser/extensions/api/runtime/atom_runtime_api_delegate.cc",
    "shell/browser/extensions/api/runtime/atom_runtime_api_delegate.h",
    "shell/browser/extensions/atom_extensions_browser_client.cc",
    "shell/browser/extensions/atom_extensions_browser_client.h",
    "shell/browser/extensions/atom_browser_context_keyed_service_factories.cc",
    "shell/browser/extensions/atom_browser_context_keyed_service_factories.h",
    "shell/browser/extensions/atom_display_info_provider.cc",
    "shell/browser/extensions/atom_display_info_provider.h",
    "shell/browser/extensions/atom_extension_host_delegate.cc",
    "shell/browser/extensions/atom_extension_host_delegate.h",
    "shell/browser/extensions/atom_extension_loader.cc",
    "shell/browser/extensions/atom_extension_loader.h",
    "shell/browser/extensions/atom_extension_system.cc",
    "shell/browser/extensions/atom_extension_system.h",
    "shell/browser/extensions/atom_extension_system_factory.cc",
    "shell/browser/extensions/atom_extension_system_factory.h",
    "shell/browser/extensions/atom_extension_web_contents_observer.cc",
    "shell/browser/extensions/atom_extension_web_contents_observer.h",
    "shell/browser/extensions/atom_navigation_ui_data.cc",
    "shell/browser/extensions/atom_navigation_ui_data.h",
    "shell/common/extensions/atom_extensions_api_provider.cc",
    "shell/common/extensions/atom_extensions_api_provider.h",
    "shell/common/extensions/atom_extensions_client.cc",
    "shell/common/extensions/atom_extensions_client.h",
    "shell/renderer/extensions/atom_extensions_renderer_client.cc",
    "shell/renderer/extensions/atom_extensions_renderer_client.h",
  ]

  app_sources = [
    "shell/app/atom_main.cc",
    "shell/app/atom_main.h",
  ]

  framework_sources = [
    "shell/app/atom_library_main.h",
    "shell/app/atom_library_main.mm",
  ]

  login_helper_sources = [ "shell/app/atom_login_helper.mm" ]
}
